--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Albazip</string>
+    <string name="app_name">알바집</string>
     <string name="tv_alert_info">반드시 본인의 매장을 등록해주세요. 본인의 매장이 아닐 경우 알바집 서비스 이용이 제한됩니다.</string>
     <string name="title_activity_mon_boarding">MOnBoardingActivity</string>
     <!-- Strings used for fragments for navigation -->
