--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!-- common -->
+    <string name="common_done">완료</string>
 
     <!-- 매장 추가 정보 -->
     <string name="input_place_more_title">추가 정보를 입력해주세요.</string>
@@ -20,5 +22,9 @@
     <string name="input_place_more_rest_day">공휴일은 쉬어요.</string>
     <string name="input_place_more_pay_day">급여일</string>
     <string name="input_place_more_register">매장 등록하기</string>
+
+    <!-- 영업 시간 설정 -->
+    <string name="running_time_title">영업시간 설정</string>
+    <string name="running_time_same">모든 영업시간이 같아요.</string>
 
 </resources>
